# weft

./: .gitignore  AGENTS.md  ARCHITECTURE.md  DESIGN.md  PRODUCT.md  README.md  README.zh-CN.md  index.html  package-lock.json  package.json
.githooks/: pre-push
.github/workflows/: ci.yml
designs/plans/: 2026-06-10-default-agent-selection.md
designs/specs/: 2026-06-10-default-agent-selection-design.md
designs/weft-redesign/: HANDOFF.md  LANDING-PLAN.md
scripts/: install-git-hooks.mjs  preflight.sh  prepare-open-computer-use-sidecar.mjs  verify-atlas-identity.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/sidecars/: README.md  open-computer-use  open-computer-use.version.json
src-tauri/sidecars/open-computer-use-runtime/Open Computer Use.app/Contents/: Info.plist
src-tauri/sidecars/open-computer-use-runtime/Open Computer Use.app/Contents/MacOS/: OpenComputerUse
src-tauri/sidecars/open-computer-use-runtime/Open Computer Use.app/Contents/_CodeSignature/: CodeResources
src-tauri/src/: ask.rs  brief.rs  check.rs  claude.rs  codex.rs  codex_app_server.rs  commands.rs  config.rs  coordinator.rs  detect.rs  gc.rs  git.rs  lib.rs  main.rs  materialize.rs  opencode.rs  paths.rs  planner.rs  power.rs  profile.rs  pty.rs  sidecar.rs
src-tauri/src/adapters/: mod.rs
src-tauri/src/backup/: config.rs  git_remote.rs  mod.rs  recovery_key.rs  scheduler.rs  snapshot.rs
src-tauri/src/bus/: global.rs  inject.rs  mod.rs  server.rs  state.rs
src-tauri/src/computer_use/: diagnostics.rs  helper.rs  inject.rs  mod.rs  settings.rs
src-tauri/src/im/: inbound.rs  mod.rs  outbound.rs
src-tauri/src/im/feishu/: mod.rs  ws.rs
src-tauri/src/lead_chat/: commands.rs  engine.rs  mod.rs  proto.rs  repo_state.rs  sentinels.rs
src-tauri/src/skills/: inject.rs  mod.rs  parse.rs  sync.rs
src-tauri/src/store/: key.rs  legacy.rs  mod.rs  repo.rs
src-tauri/src/store/entities/: app_setting.rs  direction.rs  mod.rs  plan.rs  repo_ref.rs  session.rs  skill_enable.rs  skill_source.rs  thread.rs
src-tauri/src/store/migration/: mod.rs
src-tauri/tests/: backup_end_to_end.rs  backup_git_remote.rs  backup_recovery.rs  backup_scheduler.rs  backup_snapshot.rs  bus_http.rs  db_encryption.rs  ensure_default_workspace.rs  im_bridge.rs  lead_prompt.rs  lead_repo_state.rs  lead_sentinels.rs  m2_git.rs  m2_worktree.rs
src/board/: BusDrawer.tsx  CoordinationPanel.tsx  NeedsYouView.tsx  RepoGraph.tsx  RepoMapView.tsx  ScopeConfirmView.tsx  ScopeReview.tsx  ThreadBoard.tsx  WorkspaceBoard.tsx  WorkspaceHome.tsx  WorkspaceKanban.tsx
src/components/: CommandPalette.tsx  DangerToast.tsx  EffectiveConfigDialog.tsx  ErrorBoundary.tsx  FirstRunOnboarding.tsx  Inspect.tsx  Markdown.tsx  NeedsDock.tsx  SkillsSettings.tsx  (+1 more)
(+48 files in other folders)
