[package]
name = "weft-app"
version = "0.1.0"
description = "weft — multi-repo / multi-tool session orchestrator"
authors = ["weft"]
edition = "2021"

[lib]
name = "weft_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
base64 = "0.22"
tauri-plugin-mcp-bridge = "0.11.2"
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
async-trait = "0.1"
dirs = "5"
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "time", "sync"] }
axum = "0.7"
tower = "0.5"
toml = "0.8"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
