[package]
name = "atlas-app"
version = "0.1.0"
description = "Atlas — local multi-agent desktop workbench"
authors = ["Jingchen"]
edition = "2021"

[lib]
name = "atlas_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
base64 = "0.22"
tauri-plugin-mcp-bridge = "0.11.2"
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
async-trait = "0.1"
dirs = "5"
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "time", "sync"] }
axum = "0.7"
tower = "0.5"
# opencode slash-command discovery hits http://127.0.0.1 only — no TLS needed.
reqwest = { version = "0.12", default-features = false, features = ["json"] }
toml = "0.8"
keepawake = "0.6"
open-lark = { version = "0.14", default-features = false, features = ["im", "websocket"] }
tauri-plugin-process = "2.3.1"
# SQLCipher: replace SQLite with the encrypted variant statically. The feature
# must be declared on the top-level manifest so it propagates via Cargo feature
# unification to sqlx-sqlite's indirect dep on libsqlite3-sys.
libsqlite3-sys = { version = "0.30", features = ["bundled-sqlcipher-vendored-openssl"] }
keyring = "3"
rand = "0.8"
sha1 = "0.10"
hex = "0.4"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
